stylesheets/style.css
body {
  font-size: 14px;
  font-family: Verdana, sans-serif;
  line-height: 20px;
  padding: 0;
  background-color: #00409c;
}

h1 {
  display: inline-block;
  vertical-align: middle;
  font-size: 20px;
  font-weight: normal;
  text-transform: uppercase;
  line-height: 30px;
  margin: 0 10px 5px 5px;
}

textarea, .CodeMirror {
  font-family: '나눔고딕코딩', 'Nanum Gothic Coding', '굴림체', 'GulimChe', monospace;
  font-size: 1em;
  line-height: 18px;
  height: 100%;
}

textarea, .CodeMirror pre {
  padding-left: 8px;
  padding-right: 8px;
}

textarea {
  display: block;
  border: 0;
  border-radius: 0;
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding-top: 6px;
  padding-bottom: 6px;
  resize: none;  /* Turn off Chrome's textarea resizer */
}

textarea[readonly] {
  cursor: auto;
}

.btn-toolbar {
  margin: 5px 0 0;
  padding: 0 0 0 5px;
}

.btn-group {
  margin: 0 5px 5px 0;
}

.btn-group + .btn-group {
  margin-left: 0;
}

@media (max-width: 539px) {
  .btn .text {
    display: none;
  }
}

.yaja-controls, .yaja-status-bar {
  color: white;
}

.modal-header h3 {
  font-size: 22px;
}

.yaja-open-modal-body table {
  table-layout: fixed;
}

.yaja-open-modal-body tbody tr {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.yaja-open-modal-body tbody tr.selected {
  background-color: #0088cc;
  color: white;
}

.yaja-open-modal-body td {
  vertical-align: middle;
}

.yaja-open-modal-body .name {
  width: 30%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.yaja-open-modal-body code {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: block;
}

.yaja-open-modal-body .empty {
  text-align: center;
}

.yaja-save-modal {
  width: 360px;
  margin-left: -180px;
}

@media (max-width: 767px) {
  .yaja-save-modal {
    width: auto;
    max-width: 360px;
    margin-left: auto;
    margin-right: auto;
  }
}

.yaja-status-bar {
  padding: 3px 0;
  height: 20px;
  font-size: 0.85em;
  position: relative;
  overflow: hidden;
}

.yaja-status-bar-left {
  position: absolute;
  z-index: 10;
  padding: 0 5px;
  background-color: #00409c;
  -webkit-box-shadow: 0 0 5px 5px #00409c;
  box-shadow: 0 0 5px 5px #00409c;
}

.yaja-status-bar-right {
  position: absolute;
  z-index: 5;
  padding: 0 5px;
  right: 0;
}

.yaja-pane {
  position: relative;
}

.yaja-label {
  color: #666;
  position: absolute;
  display: block;
  top: 6px;
  right: 6px;
  border: 1px solid #ccc;
  border-radius: 4px;
  padding: 2px 6px;
  cursor: default;
  opacity: 0.5;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.yaja-label:hover {
  opacity: 0;
}

.ui-layout-resizer {
  background-color: #ccc;
  height: 1px;
}

.ui-layout-toggler {
  background-color: #999;
}

